--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "special70-github-io",
+  "name": "portfolio_website",
   "private": true,
   "version": "0.1.0",
-  "homepage": "https://Special70.github.io/Special70.github.io",
+  "homepage": "https://Special70.github.io/portfolio_website/",
   "type": "module",
   "scripts": {
     "dev": "vite",
